  AbstractFilteredTableModel sorting functionality refactored
  AuditProperty is now readOnly by default
  EntityLookupField refactored, needs more of it!
  Javadoc berserker appeared.
  FilteredTableModel.compare() removed
  AbstractFilteredTableModel.compare() renamed to compareRows() and privatized
  FilteredTableModel.getFilterModels() removed
  FilteredTableModel get... methods taking column index as parameter now take column identifiers
  EntityDbRemoteAdapter refactored
  EntityDbRemoteServer, fixed inconsistencies in maintenance interval / timeout API
  ConnectionPoolImpl now checks if a connection is valid before returning it from the pool, lets survive db restarts please
  EntityDbRemoteAdapter does the same if connection pool is not enabled
  ServerMonitor can now set the server logging level
  Configuration now loads logging level property from Util
  EntityDbRemote no longer extends EntityDb
  EntityDbRemoteProvider proxies EntityDb
  EntityDb no longer throws Exception
  RuntimeException replaced with UnsupportedException, IllegalStateException and IllegalArgument exception where applicable
  DomainClassGenerator renamed to EntityGenerator, refactored
  EntityGeneratorTest added, needs fleshing out
  Some remote refactorings
  Entities.Proxy dismantled, Entity.*Provider added instead
  ConnectionPoolImpl refactored quite a bit
  ConnectionPool/EntityDb/EntityDbRemote.isConnectionValid() renamed to isValid()
  ConnectionPool.checkOutConnection() and checkInConnection() renamed to getConnection() and returnConnection()
  EntityDbRemoteAdapter refactored
  domain package refactored
  EntityModel.masterSelectionChanged() renamed to initialize()
  EntityTableModel.searchByForeignKeyValues() renamed to setForeignKeySearchValues()
  Refactored ConnectionPool and related classes
  Property.get/SetEntityID() added
  EntityCriteriaUtil, reduced serialization overhead
  ConnectionPoolStatistics.connectionRequestsFailed added